--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="Portfolio of Mahmood Ahmad, showcasing my skills, projects, and experience in web and software development." />
+    <meta name="keywords" content="Mahmood Ahmad, portfolio, web development, software development, JavaScript, React, front-end, developer" />
+    <meta property="og:title" content="Mahmood Ahmad | Portfolio" />
+    <meta property="og:description" content="Explore Mahmood Ahmad's portfolio to see my work in web development and more." />
+    <meta property="og:image" content="/mdp.png" />
+    <meta property="og:url" content="https://www.mahmoodahmad.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mahmood Ahmad | Portfolio" />
+    <meta name="twitter:description" content="Explore Mahmood Ahmad's portfolio to see my work in web development and more." />
+    <meta name="twitter:image" content="/mdp.png" />
+    <meta name="author" content="Mahmood Ahmad" />
+    
+    <!-- Favicon and touch icons -->
+    <link rel="icon" type="image/png" href="/mdp.png" />
+    <link rel="apple-touch-icon" href="/mdp.png" />
+
+    <!-- Google Fonts (if needed) -->
+    <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- Title -->
+    <title>Mahmood Ahmad | Portfolio</title>
+
+    <!-- Preconnect to important domains -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://www.google-analytics.com" />
+
+    <!-- Performance improvements -->
+    <link rel="stylesheet" href="styles.css" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
   </head>
   <body>
     <div id="root"></div>
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
