--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <link rel="preconnect" href="https://www.google-analytics.com" />
 
     <!-- Performance improvements -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
   </head>
   <body>
     <div id="root"></div>
     
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
