index file updated

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="keywords" content="Mahmood Ahmad, portfolio, web development, software development, JavaScript, React, front-end, developer" />
     <meta property="og:title" content="Mahmood Ahmad | Portfolio" />
     <meta property="og:description" content="Explore Mahmood Ahmad's portfolio to see my work in web development and more." />
-    <meta property="og:image" content="./mdp.png" />
+    <meta property="og:image" content="/mdp.png" />
     <meta property="og:url" content="https://www.mahmoodahmad.com" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mahmood Ahmad | Portfolio" />
     <meta name="twitter:description" content="Explore Mahmood Ahmad's portfolio to see my work in web development and more." />
-    <meta name="twitter:image" content="./mdp.png" />
+    <meta name="twitter:image" content="/mdp.png" />
     <meta name="author" content="Mahmood Ahmad" />
     
     <!-- Favicon and touch icons -->
     <link rel="icon" type="image/png" href="/mdp.png" />
-    <link rel="apple-touch-icon" href="./mdp.png" />
+    <link rel="apple-touch-icon" href="/mdp.png" />
 
     <!-- Google Fonts (if needed) -->
     <link href="https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
     <link rel="preconnect" href="https://www.google-analytics.com" />
 
     <!-- Performance improvements -->
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
   </head>
   <body>
