--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="preconnect" href="https://www.google-analytics.com" />
 
     <!-- Performance improvements -->
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
   </head>
   <body>
